--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -1,7 +1,8 @@
 FROM webdevops/php-nginx:8.3-alpine
 
 RUN apk add --no-cache \
-    nodejs
+    nodejs \
+    npm
 
 # Copy Nginx configuration
 COPY docker/easypanel/nginx/default.conf /etc/nginx/nginx.conf
