--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -10,14 +10,14 @@ RUN apk add --no-cache \
 COPY docker/easypanel/nginx/default.conf /etc/nginx/nginx.conf
 
 # Copy PHP configuration
-COPY docker/easypanel/php-fpm/php-fpm.conf /opt/docker/etc/php-fpm.d/www.conf
+COPY docker/easypanel/php-fpm/php-fpm.conf /opt/docker/etc/php/fpm/php-fpm.conf
 COPY docker/easypanel/php/php.ini /opt/docker/etc/php/php.ini
 
 # Copy OPCache configuration
 COPY docker/easypanel/php/opcache.ini /opt/docker/etc/php/conf.d/opcache.ini
 
 # Copy Supervisor configuration
-COPY docker/easypanel/supervisor/supervisord.conf /opt/docker/etc/supervisord.conf/supervisord.conf
+COPY docker/easypanel/supervisor/supervisord.conf /opt/docker/etc/supervisor.d/supervisord.conf
 
 WORKDIR /app
 
@@ -38,6 +38,8 @@ RUN php artisan key:generate \
     && php artisan route:cache \
     && php artisan view:cache
 
+RUN php artisan migrate
+
 # # Set up permissions
 # RUN chown -R www-data:www-data /app \
 #     && chmod -R 755 /app/storage
@@ -56,5 +58,3 @@ RUN touch /var/log/cron.log
 
 # Add cron job directly to crontab
 RUN echo "* * * * * /usr/local/bin/php /app/artisan schedule:run >> /var/log/cron.log 2>&1" | crontab -
-
-ENTRYPOINT ["/app/docker/easypanel/entrypoint.sh"]
