--- a/docker/easypanel/php/php.ini
+++ b/docker/easypanel/php/php.ini
@@ -1,54 +1,15 @@
-[PHP]
 date.time = UTC
-
-;;;;;;;;;;;;;;;;;;;
-; Resource Limits ;
-;;;;;;;;;;;;;;;;;;;
-memory_limit = 256M
-max_execution_time = 300
-max_input_time = 300
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; File Uploads and Post Size ;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-post_max_size = 100M
-upload_max_filesize = 100M
-
-; Realpath Cache
-realpath_cache_size = 4096k
-realpath_cache_ttl = 600
-
-; Output Buffering
-output_buffering = On
-
-;;;;;;;;;;;;;;;;;;;;
-; Session Handling ;
-;;;;;;;;;;;;;;;;;;;;
-session.gc_maxlifetime = 1440
-session.save_path = "/tmp"
-
-;;;;;;;;;;;;;;;;;;;;
-; Security and Safety ;
-;;;;;;;;;;;;;;;;;;;;
-disable_functions = exec,passthru,shell_exec,system
-
-;;;;;;;;;;;;;;;;;;;;
-; File Uploads ;
-;;;;;;;;;;;;;;;;;;;;
-file_uploads = On
-
-;;;;;;;;;;;;;;;;;;;;
-; Error Handling and Logging ;
-;;;;;;;;;;;;;;;;;;;;
-log_errors = On
-error_reporting = E_ALL
 display_errors = Off
-display_startup_errors = Off
+memory_limit = 128M
+max_execution_time = 60
+post_max_size = 32M
+upload_max_filesize = 16M
 
-;;;;;;;;;;;;;;;;;;;;
-; Other Settings ;
-;;;;;;;;;;;;;;;;;;;;
-; Add any other settings you might need for your specific application
-
-; Hide X-Powered-By header
-expose_php = Off
+opcache.enable=${PHP_OPCACHE_ENABLE}
+opcache.revalidate_freq=0
+opcache.validate_timestamps=1
+opcache.max_accelerated_files=10000
+opcache.memory_consumption=192
+opcache.max_wasted_percentage=10
+opcache.interned_strings_buffer=16
+opcache.fast_shutdown=1
