--- a/docker/easypanel/nginx/default.conf
+++ b/docker/easypanel/nginx/default.conf
@@ -1,77 +1,25 @@
-user  nginx;
-worker_processes  auto;
+server {
+    listen 80 default_server;
 
-error_log /dev/stderr error;
-pid /var/run/nginx.pid;
+    server_name _;
 
-events {
-    worker_connections  1024;
-}
+    root "/app/public";
+    index index.php;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format main '[nginx] $remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    sendfile        on;
-    tcp_nopush     on;
-    tcp_nodelay    on;
-    keepalive_timeout  120;
-    types_hash_max_size 2048;
-
-    proxy_read_timeout 999999;
-    client_max_body_size 4096M;
-
-    gzip  on;
-    gzip_disable "msie6";
-
-    include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
+    client_max_body_size 50m;
 
     access_log   /docker.stdout;
     error_log    /docker.stderr warn;
 
-    server {
-        listen 80 default_server;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-        server_name _;
-
-        root "/app/public";
-
-        index index.php;
-
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-            gzip_static on;
-        }
-
-        location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass php;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            # Block httpoxy attacks. See https://httpoxy.org/.
-            fastcgi_param HTTP_PROXY "";
-            fastcgi_param SCRIPT_FILENAME     $request_filename;
-            fastcgi_read_timeout 600;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-
-            # FastCGI buffering settings
-            fastcgi_buffering on;
-            fastcgi_buffers 16 32k;
-            fastcgi_buffer_size 64k;
-            fastcgi_busy_buffers_size 128k;
-            fastcgi_temp_file_write_size 128k;
-        }
-
-        error_page 404 /index.php;
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME     $request_filename;
+        fastcgi_read_timeout 600;
     }
 }
