--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -34,27 +34,24 @@ RUN php artisan key:generate \
     && php artisan route:cache \
     && php artisan view:cache
 
-# RUN php artisan migrate
+# Create storage directories with proper structure
+RUN mkdir -p /app/storage/framework/{sessions,views,cache} \
+    && mkdir -p /app/storage/logs \
+    && mkdir -p /app/bootstrap/cache
 
-# # Set up permissions
-# RUN chown -R www-data:www-data /app \
-#     && chmod -R 755 /app/storage
-
-RUN mkdir -p /app/storage/framework/{sessions,views,cache}
-RUN mkdir -p /app/storage/logs
-RUN mkdir -p /app/bootstrap/cache
-
-RUN chmod -R 755 /app/storage
-RUN chmod -R 755 /app/bootstrap/cache
+# Set proper ownership and permissions
+RUN chown -R www-data:www-data /app/storage \
+    && chown -R www-data:www-data /app/bootstrap/cache \
+    && chmod -R 775 /app/storage \
+    && chmod -R 775 /app/bootstrap/cache
 
 # Scheduler setup
-
 # Create a log file
-RUN touch /var/log/cron.log
+RUN touch /var/log/cron.log \
+    && chown www-data:www-data /var/log/cron.log
 
 # Add cron job directly to crontab
 RUN echo "* * * * * php /app/artisan schedule:run >> /dev/null 2>&1" | crontab -
 
 # Start supervisor
 ENTRYPOINT ["/app/docker/easypanel/entrypoint.sh"]
-
