--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -27,6 +27,17 @@ RUN composer install --no-interaction --no-scripts --no-dev --optimize-autoloade
 RUN npm ci \
     && npm run build:ssr
 
+# Create storage directories with proper structure
+RUN mkdir -p /app/storage/framework/{sessions,views,cache} \
+    && mkdir -p /app/storage/logs \
+    && mkdir -p /app/bootstrap/cache
+
+# Set proper ownership and permissions (as suggested)
+RUN chmod -R gu+w /app/storage \
+    && chmod -R guo+w /app/storage \
+    && chmod -R gu+w /app/bootstrap/cache \
+    && chmod -R guo+w /app/bootstrap/cache
+
 # Optimize Laravel
 RUN php artisan key:generate \
     && php artisan optimize:clear \
@@ -34,21 +45,9 @@ RUN php artisan key:generate \
     && php artisan route:cache \
     && php artisan view:cache
 
-# Create storage directories with proper structure
-RUN mkdir -p /app/storage/framework/{sessions,views,cache} \
-    && mkdir -p /app/storage/logs \
-    && mkdir -p /app/bootstrap/cache
-
-# Set proper ownership and permissions
-RUN chown -R www-data:www-data /app/storage \
-    && chown -R www-data:www-data /app/bootstrap/cache \
-    && chmod -R 775 /app/storage \
-    && chmod -R 775 /app/bootstrap/cache
-
 # Scheduler setup
 # Create a log file
-RUN touch /var/log/cron.log \
-    && chown www-data:www-data /var/log/cron.log
+RUN touch /var/log/cron.log
 
 # Add cron job directly to crontab
 RUN echo "* * * * * php /app/artisan schedule:run >> /dev/null 2>&1" | crontab -
