Adicionando mais permissão

--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -36,7 +36,15 @@ RUN mkdir -p /app/storage/framework/{sessions,views,cache} \
 RUN chmod -R gu+w /app/storage \
     && chmod -R guo+w /app/storage \
     && chmod -R gu+w /app/bootstrap/cache \
-    && chmod -R guo+w /app/bootstrap/cache
+    && chmod -R guo+w /app/bootstrap/cache \
+    && chmod -R gu+w /app/storage/logs \
+    && chmod -R guo+w /app/storage/logs \
+    && chmod -R gu+w /app/storage/framework/sessions \
+    && chmod -R guo+w /app/storage/framework/sessions \
+    && chmod -R gu+w /app/storage/framework/views \
+    && chmod -R guo+w /app/storage/framework/views \
+    && chmod -R gu+w /app/storage/framework/cache \
+    && chmod -R guo+w /app/storage/framework/cache
 
 # Optimize Laravel
 RUN php artisan key:generate \
