--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-redis": "*",
         "inertiajs/inertia-laravel": "^2.0",
         "lakm/laravel-comments": "^2.3",
         "laravel/framework": "12.13",
