Usando multi stage

--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -1,61 +1,30 @@
-FROM webdevops/php-nginx:8.3-alpine
+FROM serversideup/php:8.3-fpm-nginx AS base-production
 
-RUN apk add --no-cache \
-    nodejs \
-    npm \
-    sqlite \
-    sqlite-dev
+ENV PHP_OPCACHE_ENABLE=1
 
-# Copy Nginx configuration
-COPY docker/easypanel/nginx/vhost.conf /opt/docker/etc/nginx/vhost.conf
+USER root
 
-# Copy PHP configuration
-COPY docker/easypanel/php/php.ini /opt/docker/etc/php/php.ini
+RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
+RUN apt-get install -y nodejs
 
-# Copy Supervisor configuration
-COPY docker/easypanel/supervisor/supervisord.conf /opt/docker/etc/supervisor.d/supervisord.conf
+COPY --chown=www-data:www-data . /var/www/html
 
-WORKDIR /app
+USER www-data
 
-# Copy composer.json and composer.lock
-COPY . .
+RUN npm install
+RUN npm run build
 
-# Install dependencies
-RUN composer install --no-interaction --no-scripts --no-dev --optimize-autoloader
-
-# Install frontend dependencies and build assets
-RUN npm ci \
-    && npm run build:ssr
-
-# Create storage directories with proper structure
-RUN mkdir -p /app/storage/framework/{sessions,views,cache} \
-    && mkdir -p /app/storage/logs \
-    && mkdir -p /app/bootstrap/cache
-
-# Set proper ownership and permissions (as suggested)
-RUN chmod -R 777 /app/storage \
-    && chmod -R 777 /app/bootstrap/cache \
-    && chmod -R 777 /app/storage/logs \
-    && chmod -R 777 /app/storage/framework/sessions \
-    && chmod -R 777 /app/storage/framework/views \
-    && chmod -R 777 /app/storage/framework/cache
-
-# Optimize Laravel
-RUN php artisan key:generate \
-    && php artisan optimize:clear \
-    && php artisan config:cache \
-    && php artisan route:cache \
-    && php artisan view:cache \
-    && php artisan event:cache
-
-# Scheduler setup
-# Create a log file
-RUN touch /var/log/cron.log
-
-# Add cron job directly to crontab
-RUN echo "* * * * * php /app/artisan schedule:run >> /dev/null 2>&1" | crontab -
+RUN composer install --no-interaction --optimize-autoloader --no-dev
 
 
+FROM base-production AS main-app
 
-# Start supervisor
-ENTRYPOINT ["/app/docker/easypanel/entrypoint.sh"]
+RUN ["php", "artisan", "migrate", "--force"]
+
+FROM base-production AS queues
+
+CMD ["php", "artisan", "queue:work", "--sleep=3", "--tries=3", "--backoff=3", "--max-time=3600"]
+
+FROM base-production AS horizon
+
+CMD ["php", "artisan", "horizon"]
