--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -4,6 +4,8 @@ ENV PHP_OPCACHE_ENABLE=1
 
 USER root
 
+RUN pecl install redis && docker-php-ext-enable redis
+
 RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
 RUN apt-get install -y nodejs
 
