--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,36 @@
-/vendor
-/boostrap/
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
 /public/storage
+/storage/*.key
+/storage/app/public
+/storage/debugbar
+/storage/ssr
+/storage/clockwork
+/storage/logs
+/storage/pail
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/vendor
+.env.backup
+/.idea/sonarlint
+.phpstorm.meta.php
+_ide_helper_models.php
 _ide_helper.php
-.idea
-.vscode
-.DS_Store
-.gitignore
+.php-cs-fixer.cache
+.husky
+/.vscode
+**/.DS_Store
+/public/page-cache
+.phpunit.database.checksum
+.phpunit.cache
+rr
+.rr.yaml
+frankenphp
+.config
+.data
 .git
