--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "lakm/laravel-comments": "^2.3",
         "laravel/framework": "12.13",
         "laravel/horizon": "^5.31",
+        "laravel/octane": "^2.9",
         "laravel/pennant": "^1.16",
         "laravel/pulse": "^1.4",
         "laravel/scout": "^10.14",
